# zine2epub

./: .gitignore  README.md  main.py  pyproject.toml  test_scraper.py
zine2epub/: __init__.py  app.py  cache.py  epub_generator.py  models.py  url_parser.py
zine2epub/scrapers/: __init__.py  base.py  clarkesworld.py  lightspeed.py  uncanny.py
zine2epub/screens/: __init__.py  complete.py  issue_list.py  progress.py  zine_list.py
zine2epub/templates/: article.xhtml  placeholder.xhtml  styles.css  toc.xhtml
