[project]
name = "zine2epub"
version = "0.1.0"
description = "A Python CLI tool to retrieve HTML from online fiction zines and convert them to EPUB2 format"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.0",
    "curl-cffi>=0.6.0",
    "lxml>=5.1.0",
    "jinja2>=3.1.0",
    "ebooklib>=0.18",
    "cssselect>=1.3.0",
]

[project.scripts]
zine2epub = "main:main"

[tool.uv]
package = true
